--- a/vistas/login.html
+++ b/vistas/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Tienda Buenos Aires | Login</title>
+  <title>Taller KitMotos | Login</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -18,8 +18,8 @@
   <link rel="stylesheet" href="../public/css/_all-skins.min.css">
   <!-- Morris chart --><!-- Daterange picker -->
 </head>
-<body  background="BuenosAires.jpg" style=" background: url(BuenosAires.jpg) no-repeat center center fixed;
-background-size: 70% 120%;">
+<body  background="KitMotos.jpg" style=" background: url(KitMotos.jpg) no-repeat center center fixed;
+background-size: 100% 120%;">
 <div class="login-box" style="
  margin-top:12%;
 margin-right:36%;
@@ -29,9 +29,9 @@ padding-right: 12px;
 padding-left: 12px;
 background: white;
 border-radius: 25px;
-border: solid #CC705C;
+border: solid #0519fa;
 ">
-  <div class="card-header" style=" text-align: center; font-size:35px; font-family:Brush Script MT; ">Inición Sesión Tienda Buenos Aires</div>
+  <div class="card-header" style=" text-align: center; font-size:45px; font-family:Brush Script MT; ">Inición Sesión KitMotos</div>
   <!-- /.login-logo -->
   <div class="login-box-body">
     <p class="login-box-msg">Ingresa tus datos de Acceso</p>
